manifests/prod/dsh/EndpointSlice-dsh.yaml
addressType: IPv4
apiVersion: discovery.k8s.io/v1
endpoints:
  - addresses:
      - 100.83.142.17
    conditions:
      ready: true
kind: EndpointSlice
metadata:
  labels:
    kubernetes.io/service-name: dsh
  name: dsh
  namespace: dsh
ports:
  - name: http
    port: 3080
    protocol: TCP
