manifests/prod/dsh/Service-dsh.yaml
apiVersion: v1
kind: Service
metadata:
  name: dsh
  namespace: dsh
spec:
  ports:
    - name: http
      port: 80
      targetPort: 3080
  type: ClusterIP
